@@ -1,0 +1,8 @@
+fileFormatVersion: 2
+guid: b6f5e4894540ff44681de8990d2f8518
+timeCreated: 1461599224
+licenseType: Free
+NativeFormatImporter:
+  userData: 
+  assetBundleName: 
+  assetBundleVariant: 
